# tree-sitter-vyper

./: .prettierrc  Cargo.toml  README.md  binding.gyp  grammar.js  package.json
queries/: folds.scm  highlights.scm  indents.scm  locals.scm  tags.scm
script/: known_failures.txt  parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.cc
test/corpus/: expressions.txt  statements.txt  vyper.txt
