[package]
name = "tree-sitter-vyper"
description = "Vyper grammar for the tree-sitter parsing library"
version = "0.1.0"
authors = [
    "Max Brunsfeld <maxbrunsfeld@gmail.com>",
    "Douglas Creager <dcreager@dcreager.net>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "vyper"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/madlabman/tree-sitter-vyper"
edition = "2018"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">= 0.19, < 0.21"

[build-dependencies]
cc = "1.0"
